--- a/GameStyle.css
+++ b/GameStyle.css
@@ -15,6 +15,37 @@ body
 	font-family: Calibri, Arial;
 }
 
+.item
+{
+	text-align: center;
+	border: 8px solid;
+	border-radius: 16px;
+	padding: 40px;
+	transform: translate(-50%, -50%);
+	background-color: #000000;
+	border-color: #232323;
+}
+
+.menuButton
+{
+	font-size: 35px;
+	font-family: Calibri, Arial;
+	border: 4px solid;
+	border-radius: 8px;
+	width: 250px;
+	margin: 5px;
+	cursor: pointer;
+	transition-duration: 0.5s;
+	color: #DFDFDF;
+	background-color: #424242;
+	border-color: #666666;
+}
+
+.menuButton:hover
+{
+	background-color: #666666;
+}
+
 .gameButton
 {
 	background-color: #cc0000;
