--- a/GameStyle.css
+++ b/GameStyle.css
@@ -1,22 +1,36 @@
-html
-{
+html {
 	overflow: hidden;
 	margin: 0;
 	height: 100%;
 }
 
-body
-{
+body {
 	overflow: hidden;
 	margin: 0;
 	height: 100%;
 	color: #AAAAAA;
 	background-color: #171717;
 	font-family: Calibri, Arial;
+
+	-webkit-touch-callout: none; /* Safari */
+	-webkit-user-select: none; /* Chrome */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Default */
 }
 
-.item
-{
+.arena {
+	text-align: center;
+	border: none;
+	padding: 0px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #000000;
+}
+
+.item {
 	text-align: center;
 	border: 8px solid;
 	border-radius: 16px;
@@ -26,14 +40,13 @@ body
 	border-color: #232323;
 }
 
-.menuButton
-{
+.regButton {
 	font-size: 35px;
 	font-family: Calibri, Arial;
 	border: 4px solid;
 	border-radius: 8px;
 	width: 250px;
-	margin: 5px;
+	margin: 5px auto;
 	cursor: pointer;
 	transition-duration: 0.5s;
 	color: #DFDFDF;
@@ -41,19 +54,6 @@ body
 	border-color: #666666;
 }
 
-.menuButton:hover
-{
+.regButton:hover {
 	background-color: #666666;
-}
-
-.gameButton
-{
-	background-color: #cc0000;
-	color: #AAAAAA;
-	font-family: Calibri, Arial;
-	font-size: 35px;
-	border: 4px solid #aa0000;
-	border-radius: 8px;
-	padding: 20px 20px;
-	cursor: pointer;
 }
